adding hobbies and languages

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
               </tr>
     </table>
     <hr>
-
-    <ul>Hobbies: 
+    <div class="third-container">
+    <ul class="ul-title">Hobbies: 
         <li>Coding</li>
         <li>Soccer</li>
         <li>Gym</li>
@@ -67,10 +67,13 @@
         <li>Camping</li>
     </ul>
 
-    <ul>Programming languages: 
-        <li><i class="fab fa-python" style="font-size:25px;color:rgb(25, 8, 81)"></i>Python </li>
-  
+    <ul class="ul-title">Programming languages: 
+        <li><i class="fab fa-python" style="font-size:25px;color:rgb(32, 33, 7)"></i>Python </li>
+        <li><i class="fab fa-java" style="font-size:25px;color:rgb(32, 33, 7)"></i>Java </li>
+        <li><i class="fab fa-php" style="font-size:25px;color:rgb(32, 33, 7)"></i>PHP </li>
     </ul>
+    </div>
+
     
 
 </body>
