adding hobbies, languages, and more bio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet "href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     
 </head>
 <body>
@@ -21,7 +23,9 @@
         <div class="contact-info">
             <h2 class="social"><i class="fa fa-phone" style="font-size:25px;color:rgb(25, 8, 81)"></i> Phone Number: 76 666 666</h1>
             <h2 class="social"><i class="fa fa-envelope" style="font-size:30px; color:rgb(25, 8, 81)"></i> Email:  <a href="mailto:faisalalaaeddine2000@gmail.com">faisalalaaeddine2000@gmail.com</a></h2>
-            <h2 class="linkedin"> <i class="fa fa-linkedin-square" style="font-size:30px;color:rgb(25, 8, 81)"></i> Linkedin: El Faisal Alaaeddine</h2>
+            <h2 class="linkedin"><i class="fa fa-linkedin-square" style="font-size:48px;color:red"></i>
+                Linkedin: El Faisal Alaaeddine</h2>
+            <h3><i class="glyphicon glyphicon-user" style="color:rgb(47, 133, 147); padding-left: 1%;" ></i> Age: 21</h3>
         </div>
     </div>
     <div class="more">
@@ -30,7 +34,7 @@
             I can grow my skills. I am a hard worker, creative, capable to lead or work within a team and able to work under pressure. Currently a trainee at SEFactory.</p>
 
     </div>
-    <hr>
+    <hr class="horizontal">
 
     <table border="2" class="container">
         <thead>
@@ -56,23 +60,35 @@
                 <td>17.3</td>
               </tr>
     </table>
-    <hr>
+    <hr class="horizontal">
     <div class="third-container">
     <ul class="ul-title">Hobbies: 
-        <li>Coding</li>
-        <li>Soccer</li>
-        <li>Gym</li>
-        <li>Reading</li>
-        <li>Swimming</li>
-        <li>Camping</li>
+        <li class="list">Coding</li>
+        <li class="list">Soccer</li>
+        <li class="list">Gym</li>
+        <li class="list">Reading</li>
+        <li class="list">Swimming</li>
+        <li class="list">Camping</li>
     </ul>
-
-    <ul class="ul-title">Programming languages: 
-        <li><i class="fab fa-python" style="font-size:25px;color:rgb(32, 33, 7)"></i>Python </li>
-        <li><i class="fab fa-java" style="font-size:25px;color:rgb(32, 33, 7)"></i>Java </li>
-        <li><i class="fab fa-php" style="font-size:25px;color:rgb(32, 33, 7)"></i>PHP </li>
+    <hr class="horizontal">
+     <ul class="ul-title">Programming languages: 
+        <li class="list"><i class="fab fa-python" style="font-size:36px;color:rgb(32, 33, 7)"></i> Python </li>
+        <li class="list"><i class="fab fa-java" style="font-size:36px;color:rgb(32, 33, 7)"></i> Java </li>
+        <li class="list"><i class="fab fa-php" style="font-size:36px;color:rgb(32, 33, 7)"></i> PHP </li>
     </ul>
     </div>
+    <hr class="horizontal">
+    <div class="my-bio">
+        <ul></ul> 
+            <li class="list">Worked on multiple projects uring varsity. I created, with cooperation with my groupmates, a database project to manage the database management system of an airport.</li>
+            <li class="list">Designed a software system for a hospital by initializing the schema, creating the tables, and code using java</li>
+            <li class="list">Created Java projects about the system of a car using inheritance and interfaces</li>
+            <li class="list">Reading</li>
+
+        </ul>
+    </div>
+    <hr class="horizontal">
+
 
     
 
