modifying the flex of the containers

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Faisal Alaaeddine</title>
-    <link rel="stylesheet "href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet "href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
@@ -15,7 +16,8 @@
 </head>
 <body>
     <div class="portfolio">
-        <img src="assets/Faisal.jpeg" class="faisal-image">
+        <div class="el-faisal"><img src="assets/Faisal.jpeg" class="faisal-image"></div>
+        
         <div class="my-profile">
             <h1 class="name">El Faisal Alaaeddine</h1>
             <h3 class="duty">Web Developer and Mathematician</h2>
@@ -70,6 +72,7 @@
         <li class="list">Swimming</li>
         <li class="list">Camping</li>
     </ul>
+
     <hr class="horizontal">
      <ul class="ul-title">Programming languages: 
         <li class="list"><i class="fab fa-python" style="font-size:36px;color:rgb(32, 33, 7)"></i> Python </li>
@@ -84,6 +87,14 @@
             <li class="list">Designed a software system for a hospital by initializing the schema, creating the tables, and code using java</li>
             <li class="list">Created Java projects about the system of a car using inheritance and interfaces</li>
             <li class="list">Done projects along with group members about agile method in software engineering</li>
+            <li class="list">An instructor for math 201 calculus 3 course</li>
+            <li class="list">Assisting school students for their duties</li>
+            <li class="list">Joined multiple clubs: chess - math - gaming </li>
+            <li class="list">Joined Global Classes Lebanese American University Model United Nations</li>
+            <li class="list">Been with a cumminity to assist people in humanitarian or financial needs</li>
+
+
+
 
         </ul>
     </div>
@@ -94,8 +105,6 @@
         <div class="split-div"><i class='fas fa-bug' style='font-size:48px;color:rgb(21, 122, 80)'></i></div>
         <div class="split-div"><i class='far fa-keyboard' style='font-size:48px;color:rgb(21, 122, 80)'></i></div>
 
-
-        
     </div>
 
 
