--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
     <div class="portfolio">
+        <!--create a div to fit 3 different divs-->
         <div class="el-faisal"><img src="assets/Faisal.jpeg" class="faisal-image"></div>
         
         <div class="my-profile">
@@ -26,6 +27,7 @@
         <div class="contact-info">
             <h2 class="social"><i class="fa fa-phone" style="font-size:25px;color:rgb(216, 214, 224)"></i>  Phone Number: 76 666 666</h1>
             <h2 class="social"><i class="fa fa-envelope" style="font-size:30px; color:rgb(205, 201, 220)"></i>  Email:  <a href="mailto:faisalalaaeddine2000@gmail.com">faisalalaaeddine2000@gmail.com</a></h2>
+           <!--The linkedin logo could not appear, knowing that it appeared a day prior to publishing it-->
             <h2 class="linkedin"><i class="fa fa-linkedin-square" style="font-size:48px;color:rgb(255, 255, 255)"></i>
                 Linkedin: El Faisal Alaaeddine</h2>
         </div>
@@ -62,6 +64,7 @@
                 <td>17.3</td>
               </tr>
     </table>
+    <!--adding a class to hr in order to casade it -->
     <hr class="horizontal">
     <div class="third-container">
     <ul class="ul-title">Hobbies: 
@@ -99,7 +102,7 @@
         </ul>
     </div>
     <hr class="horizontal">
-
+    <!--the final div, container, will add some icons-->
     <div class="last-container">
         <div class="split-div"><i class='far fa-file-code' style='font-size:48px;color:rgb(21, 122, 80)'></i></div>
         <div class="split-div"><i class='fas fa-bug' style='font-size:48px;color:rgb(21, 122, 80)'></i></div>
