--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="portfolio">
         <!--create a div to fit 3 different divs-->
-        <div class="el-faisal"><img src="assets/Faisal.jpeg" class="faisal-image"></div>
+        <div class="el-faisal"><img src="Faisal.jpeg" class="faisal-image"></div>
         
         <div class="my-profile">
             <h1 class="name">El Faisal Alaaeddine</h1>
